Closed Bug 1212982 Opened 9 years ago Closed 5 years ago

ClearType parameters in about:support don't show if user never tweaked with ClearType Tuner

Categories

(Core :: Graphics, defect, P3)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: fireattack, Assigned: emk)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file, 2 obsolete files)

User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:42.0) Gecko/20100101 Firefox/42.0
Build ID: 20151005144425

Steps to reproduce:

"ClearType Parameters" don't show in about:support's graphics section if on Win 7. Win 10 works fine.
Blocks: 650723
OS: Unspecified → Windows 7
Flags: needinfo?(jdaggett)
According to this article, http://www.theeldergeek.com/activate_cleartype_on_welcome_screen.htm

At least for some in Win 7 system, the parameters of clear type is stored in 
HKEY_CURRENT_USER\Control Panel\Desktop
with Values names such as "FontSmoothing", "FontSmoothingGamma", and so on.

It's not in HKCU\Software\Microsoft\Avalon.Graphics or HKLM\Software\Microsoft\Avalon.Graphics
It looks like that if you never run the ClearType tuner, these registries in \Software\Microsoft\Avalon.Graphics won't exist (while user still have some kind of ClearType settings..).
OS: Windows 7 → Windows
Summary: ClearType parameters don't show in Win 7, but is shown in Win 10 → ClearType parameters in about:support don't show if user never tweaked with ClearType Tuner
Sorry, don't know the answer here.
Flags: needinfo?(jd.bugzilla)
We may not be necessary to get the not changed values. It should not cause a problem usually (just a hypothetical). And we may not have a way to get the current value or the default value at least for now.
Attachment #9040699 - Flags: review?(jmuizelaar)
Assignee: nobody → VYV03354
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Added a DWriteEnabled() check.
Attachment #9040709 - Flags: review?(jmuizelaar)
Attachment #9040699 - Attachment is obsolete: true
Attachment #9040699 - Flags: review?(jmuizelaar)

Ping?

Flags: needinfo?(jmuizelaar)

Sorry for not looking at this sooner. I'm not sure I understand the motivation here. Can you improve the commit message so that the reason for the change is clearer?

Flags: needinfo?(jmuizelaar) → needinfo?(human.peng)
Flags: needinfo?(human.peng) → needinfo?(VYV03354)
This patch is changing a way to get ClearType paramters because registry key
may not be present. CreateMonitorRenderingParams() will return default values
if the corresponding registry key is not present.
Attachment #9042436 - Flags: review?(jmuizelaar)
Attachment #9040709 - Attachment is obsolete: true
Attachment #9040709 - Flags: review?(jmuizelaar)

I updated the commit message.

Flags: needinfo?(VYV03354)

Jeff, please tell me if the commit message is still insufficient.

Flags: needinfo?(jmuizelaar)
Comment on attachment 9042436 [details] [diff] [review]
Get ClearType parameters using API instead of reading registry

Review of attachment 9042436 [details] [diff] [review]:
-----------------------------------------------------------------

Sorry. I forgot about this. It's fine.
Attachment #9042436 - Flags: review?(jmuizelaar) → review+
Pushed by VYV03354@nifty.ne.jp:
https://hg.mozilla.org/integration/mozilla-inbound/rev/37069977b1e6
Get ClearType parameters using API instead of reading registry. r=jrmuizel
Flags: needinfo?(jmuizelaar)
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: