Bug 1212982 - Get ClearType parameters using API instead of reading registry. r=jrmuizel

This patch is changing a way to get ClearType paramters because registry key
may not be present. CreateMonitorRenderingParams() will return default values
if the corresponding registry key is not present.